--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -19,3 +19,13 @@
   padding: 15px 10px;
   background-color: $heading--color;
 }
+.form-button {
+  font-weight: 500;
+  outline: 0;
+  border: 1px solid transparent;
+  color: $light--shade;
+  font-size: 1rem;
+  border-radius: 5px;
+  padding: 15px 10px;
+  background-color: $heading--color;
+}
