--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,4 @@
 @import "../scss/components/secondUsp";
 @import "../scss/components/testimonial";
 @import "../scss/components/footer";
+@import "../scss/pages/signup";
