--- a/src/scss/pages/_signup.scss
+++ b/src/scss/pages/_signup.scss
@@ -3,9 +3,10 @@
   justify-content: center;
   align-items: center;
   height: 650px;
+
   &-box {
     display: grid;
-    grid-template-rows: 100px 90px 140px 100px 100px;
+    grid-template-rows: 100px 90px 140px 150px 100px;
   }
   &-form {
     display: flex;
@@ -80,6 +81,20 @@
       align-items: center;
       color: $light--shade;
       font-size: 1.2rem;
+    }
+  }
+  &-select {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-column-gap: 30px;
+    &-box {
+      width: 250px;
+      padding: 10px;
+      border: 3px solid $heading--color;
+      border-radius: 5px;
+      & p {
+        font-size: 0.9rem;
+      }
     }
   }
 }
