--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,7 @@
 @import "../scss/components/testimonial";
 @import "../scss/components/footer";
 @import "../scss/pages/signup";
+@import "../scss/pages/login";
+@import "../scss/components/sidebar";
+@import "../scss/pages/product";
+@import "../scss/components/customEditor";
