--- a/src/css/main.css
+++ b/src/css/main.css
@@ -601,14 +601,14 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 650px;
+  height: 700px;
 }
 
 .signup-box {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 100px 90px 140px 150px 100px;
-      grid-template-rows: 100px 90px 140px 150px 100px;
+  -ms-grid-rows: 100px 90px 140px auto 40px;
+      grid-template-rows: 100px 90px 140px auto 40px;
 }
 
 .signup-form {
@@ -790,4 +790,471 @@ p {
 
 .final-setup-margin {
   margin-bottom: 20px;
+}
+
+.login {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 650px;
+}
+
+.login-box {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 90px 110px auto 50px;
+      grid-template-rows: 90px 110px auto 50px;
+  width: 400px;
+}
+
+.login-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+
+.login-form-input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+
+.login-form-input-container input {
+  border: 1px solid #757575;
+  padding: 10px 15px;
+  border-radius: 5px;
+  outline: 0;
+  background-color: #fff;
+  color: #757575;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.login-form-input-container label {
+  font-weight: 700;
+}
+
+.login-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.login-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.login-heading-title {
+  font-weight: 900;
+  font-size: 1.8rem;
+  letter-spacing: 0.1px;
+  text-align: center;
+}
+
+.final-setup-margin {
+  margin-bottom: 20px;
+}
+
+.bottom-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.bottom-text span {
+  font-size: 0.8rem;
+}
+
+.bottom-text-link {
+  color: #212121;
+  text-decoration: none;
+}
+
+.sidebar {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 350px;
+  background-color: #000;
+  color: #fff;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto 350px auto;
+      grid-template-rows: auto 350px auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.sidebar-header {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 2fr 1fr;
+      grid-template-columns: auto 2fr 1fr;
+  grid-column-gap: 10px;
+  -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px;
+  border-radius: 5px;
+  width: 290px;
+  color: #fff;
+}
+
+.sidebar-header-text {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.sidebar-header-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sidebar-header-image {
+  height: 20px;
+  width: 20px;
+}
+
+.sidebar-header-image img {
+  max-width: 100%;
+  height: 100%;
+}
+
+.sidebar-nav {
+  width: 290px;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+
+.sidebar-nav-item {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 2fr 1fr;
+      grid-template-columns: auto 2fr 1fr;
+  grid-column-gap: 10px;
+  -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.sidebar-nav-item:hover {
+  color: #000;
+  cursor: pointer;
+  background-color: #fff;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-box-shadow: 0px 8px 15px rgba(255, 255, 255, 0.3);
+          box-shadow: 0px 8px 15px rgba(255, 255, 255, 0.3);
+}
+
+.sidebar-nav-text {
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.sidebar-nav-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sidebar-nav-icon i {
+  font-size: 0.95rem;
+}
+
+.sidebar-footer {
+  width: 290px;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+
+.sidebar-footer-item {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 2fr 1fr;
+      grid-template-columns: auto 2fr 1fr;
+  grid-column-gap: 10px;
+  -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px;
+  border-radius: 5px;
+  width: 100%;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.sidebar-footer-item:hover {
+  cursor: pointer;
+  color: #000;
+  background-color: #fff;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-box-shadow: 0px 8px 15px rgba(255, 255, 255, 0.3);
+          box-shadow: 0px 8px 15px rgba(255, 255, 255, 0.3);
+}
+
+.sidebar-footer-text {
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.sidebar-footer-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sidebar-footer-icon i {
+  font-size: 0.95rem;
+}
+
+.product {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 350px auto;
+      grid-template-columns: 350px auto;
+}
+
+.product-header {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50px 2fr 50px;
+      grid-template-columns: 50px 2fr 50px;
+  -ms-grid-column: 2;
+  grid-column: 2/2;
+}
+
+.product-header-top {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 50px 280px 70px;
+      grid-template-rows: 50px 280px 70px;
+}
+
+.product-header-breadcrumbs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid lightgray;
+}
+
+.product-header-breadcrumbs h3 {
+  font-weight: 500;
+}
+
+.product-header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.product-header-container p {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 4fr;
+      grid-template-columns: 1fr 4fr;
+}
+
+.product-header-container h2 {
+  font-size: 2rem;
+}
+
+.product-header-container button {
+  background-color: #f8f8f8ff;
+  color: #757575;
+  font-size: 0.9rem;
+  outline: 0;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  padding: 5px 15px;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+}
+
+.product-header-container-title {
+  color: #757575;
+}
+
+.product-header-icons {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (auto)[9];
+      grid-template-columns: repeat(9, auto);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+}
+
+.product-header-icons-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border-left: 1px solid lightgray;
+  border-right: 1px solid lightgray;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.product-header-icons-item select {
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  padding-right: 15px;
+  cursor: pointer;
+}
+
+.product-header-icons-item:first-child {
+  border-left: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.product-header-icons-item:last-child {
+  border-right: none;
+}
+
+.custom-editor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 20px;
+  height: 70px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid lightgray;
+  border-top: 1px solid lightgray;
+}
+
+.custom-editor-buttons {
+  background-color: transparent;
+  color: #212121;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.custom-editor-textarea {
+  padding-top: 20px;
 }
